--- a/style/style.css
+++ b/style/style.css
@@ -1,1 +1,117 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  font-size: 16px;
+}
+
+body {
+  width: 100%;
+  min-height: 100vh;
+  background: white;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+a {
+  font-size: 1rem;
+  text-decoration: none;
+}
+
+.h1 {
+  line-height: 130%;
+}
+
+.single-line {
+  display: inline-block;
+}
+
+.navigation {
+  width: 100%;
+  min-height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
+  padding: 1rem 15%;
+}
+
+.slogan {
+  width: 30%;
+  text-align: left;
+  color: #6452ff;
+  position: relative;
+}
+
+.nav--ul {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.nav--li {
+  text-decoration: none;
+  list-style: none;
+  font-size: 1.1rem;
+  padding: 1rem;
+  cursor: pointer;
+  font-weight: 500;
+  color: #fd5050;
+  position: relative;
+}
+
+.nav--li:hover {
+  color: #6452ff;
+}
+
+.nav--li:hover::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 10%;
+  height: 100%;
+  border: 1px solid #6452ff;
+  border-right: none;
+}
+
+.nav--li:hover::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 10%;
+  height: 100%;
+  border: 1px solid #6452ff;
+  border-left: none;
+}
+/*# sourceMappingURL=style.css.map */
