--- a/style/style.css
+++ b/style/style.css
@@ -29,6 +29,19 @@ a {
   display: inline-block;
 }
 
+.img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.p {
+  color: #141414;
+  font-size: 1.2rem;
+  line-height: 130%;
+}
+
 .navigation {
   width: 100%;
   min-height: auto;
@@ -113,5 +126,54 @@ a {
   height: 100%;
   border: 1px solid #6452ff;
   border-left: none;
+}
+
+.header {
+  padding: 0 15%;
+  width: 100%;
+  min-height: 70vh;
+  background: #42d4a3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.img__container--header {
+  width: 60%;
+  height: 50vh;
+  position: relative;
+  z-index: 1;
+}
+
+.img__container--header::before {
+  content: '';
+  position: absolute;
+  background: rgba(158, 151, 44, 0.5);
+  z-index: -1;
+  top: 5%;
+  right: -5%;
+  width: 100%;
+  height: 100%;
+}
+
+.header__content {
+  width: 35%;
+  z-index: 2;
+}
+
+.header__content h2 {
+  font-size: 3rem;
+  color: #e6e6e6;
+  margin: 1rem 0;
 }
 /*# sourceMappingURL=style.css.map */
