--- a/style/style.scss
+++ b/style/style.scss
@@ -4,6 +4,8 @@ $padding-horizontal: 15%;
 
 $primary-color: rgb(253, 80, 80);
 $secondary-color: rgb(100, 82, 255);
+$primary-text-color: rgb(20, 20, 20);
+$secondary-text-color: rgb(230, 230, 230);
 
 // Mixins
 @mixin flex($direction: row, $justify: center, $align: center) {
@@ -46,6 +48,18 @@ a {
 	display: inline-block;
 }
 
+.img {
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
+}
+
+.p {
+	color: $primary-text-color;
+	font-size: 1.2rem;
+	line-height: 130%;
+}
+
 // Navigation styling
 .navigation {
 	width: 100%;
@@ -63,6 +77,7 @@ a {
 	position: relative;
 }
 
+// Navigation
 .nav {
 	&--ul {
 		flex-grow: 1;
@@ -105,5 +120,45 @@ a {
 				border-left: none;
 			}
 		}
+	}
+}
+
+// Header
+.header {
+	padding: 0 $padding-horizontal;
+	width: 100%;
+	min-height: 70vh;
+	background: rgb(66, 212, 163);
+	@include flex(row, space-between, center);
+}
+
+.img__container {
+	&--header {
+		width: 60%;
+		height: 50vh;
+		position: relative;
+		z-index: 1;
+
+		&::before {
+			content: '';
+			position: absolute;
+			background: rgba(158, 151, 44, 0.5);
+			z-index: -1;
+			top: 5%;
+			right: -5%;
+			width: 100%;
+			height: 100%;
+		}
+	}
+}
+
+.header__content {
+	width: 35%;
+	z-index: 2;
+
+	h2 {
+		font-size: 3rem;
+		color: $secondary-text-color;
+		margin: 1rem 0;
 	}
 }
