--- a/style/style.css
+++ b/style/style.css
@@ -42,6 +42,45 @@ a {
   line-height: 130%;
 }
 
+.btn {
+  background: #6452ff;
+  padding: 1.5rem 2rem;
+  border-radius: 20px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 1.1rem;
+  color: #e6e6e6;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  position: relative;
+  border: 2px solid #6452ff;
+}
+
+.btn::before {
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  content: '';
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  border: 2px solid #6452ff;
+}
+
+.btn:hover {
+  -webkit-box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
+}
+
+.btn:hover::before {
+  top: 5%;
+  left: 5%;
+  border: 1px solid white;
+}
+
 .navigation {
   width: 100%;
   min-height: auto;
@@ -60,7 +99,7 @@ a {
           align-items: center;
   -webkit-box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
           box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
-  padding: 1rem 15%;
+  padding: 1rem 12%;
 }
 
 .slogan {
@@ -129,10 +168,10 @@ a {
 }
 
 .header {
-  padding: 0 15%;
+  padding: 0 12%;
   width: 100%;
   min-height: 70vh;
-  background: #42d4a3;
+  background: #47d3a4;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -175,5 +214,11 @@ a {
   font-size: 3rem;
   color: #e6e6e6;
   margin: 1rem 0;
+}
+
+.btn__container {
+  width: 100%;
+  text-align: center;
+  margin: 2rem 0;
 }
 /*# sourceMappingURL=style.css.map */
