--- a/style/style.scss
+++ b/style/style.scss
@@ -1,11 +1,13 @@
 // Variables
 $box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
-$padding-horizontal: 15%;
+$padding-horizontal: 12%;
 
 $primary-color: rgb(253, 80, 80);
 $secondary-color: rgb(100, 82, 255);
 $primary-text-color: rgb(20, 20, 20);
 $secondary-text-color: rgb(230, 230, 230);
+
+$transition: all 0.3s ease;
 
 // Mixins
 @mixin flex($direction: row, $justify: center, $align: center) {
@@ -58,6 +60,42 @@ a {
 	color: $primary-text-color;
 	font-size: 1.2rem;
 	line-height: 130%;
+}
+
+.btn {
+	background: $secondary-color;
+	padding: 1.5rem 2rem;
+	border-radius: 20px;
+	border: none;
+	outline: none;
+	cursor: pointer;
+	font-size: 1.1rem;
+	color: $secondary-text-color;
+	transition: $transition;
+	position: relative;
+	border: 2px solid $secondary-color;
+
+	&::before {
+		transition: $transition;
+		content: '';
+		position: absolute;
+		top: -1px;
+		left: -1px;
+		width: 100%;
+		height: 100%;
+		border-radius: 20px;
+		border: 2px solid $secondary-color;
+	}
+
+	&:hover {
+		box-shadow: $box-shadow;
+
+		&::before {
+			top: 5%;
+			left: 5%;
+			border: 1px solid white;
+		}
+	}
 }
 
 // Navigation styling
@@ -128,7 +166,7 @@ a {
 	padding: 0 $padding-horizontal;
 	width: 100%;
 	min-height: 70vh;
-	background: rgb(66, 212, 163);
+	background: rgb(71, 211, 164);
 	@include flex(row, space-between, center);
 }
 
@@ -161,4 +199,10 @@ a {
 		color: $secondary-text-color;
 		margin: 1rem 0;
 	}
+}
+
+.btn__container {
+	width: 100%;
+	text-align: center;
+	margin: 2rem 0;
 }
