--- a/style/style.css
+++ b/style/style.css
@@ -55,6 +55,8 @@ a {
   transition: all 0.3s ease;
   position: relative;
   border: 2px solid #6452ff;
+  -webkit-box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
 }
 
 .btn::before {
@@ -62,23 +64,24 @@ a {
   transition: all 0.3s ease;
   content: '';
   position: absolute;
-  top: -1px;
-  left: -1px;
+  top: 5%;
+  left: 5%;
   width: 100%;
   height: 100%;
   border-radius: 20px;
-  border: 2px solid #6452ff;
+  border: 2px solid #e6e6e6;
 }
 
 .btn:hover {
-  -webkit-box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  background: #fd5050;
 }
 
 .btn:hover::before {
-  top: 5%;
-  left: 5%;
-  border: 1px solid white;
+  top: -2px;
+  left: -2px;
+  border: 2px solid #e6e6e6;
 }
 
 .navigation {
