--- a/style/style.scss
+++ b/style/style.scss
@@ -74,26 +74,28 @@ a {
 	transition: $transition;
 	position: relative;
 	border: 2px solid $secondary-color;
+	box-shadow: $box-shadow;
 
 	&::before {
 		transition: $transition;
 		content: '';
 		position: absolute;
-		top: -1px;
-		left: -1px;
+		top: 5%;
+		left: 5%;
 		width: 100%;
 		height: 100%;
 		border-radius: 20px;
-		border: 2px solid $secondary-color;
+		border: 2px solid $secondary-text-color;
 	}
 
 	&:hover {
-		box-shadow: $box-shadow;
+		box-shadow: none;
+		background: $primary-color;
 
 		&::before {
-			top: 5%;
-			left: 5%;
-			border: 1px solid white;
+			top: -2px;
+			left: -2px;
+			border: 2px solid $secondary-text-color;
 		}
 	}
 }
