--- a/style/style.scss
+++ b/style/style.scss
@@ -86,6 +86,7 @@ a {
 		height: 100%;
 		border-radius: 20px;
 		border: 2px solid $secondary-text-color;
+		pointer-events: none;
 	}
 
 	&:hover {
