--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,7 @@ body {
   min-height: 100vh;
   background: white;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  overflow-x: hidden;
 }
 
 a {
@@ -34,6 +35,15 @@ a {
      object-fit: cover;
   width: 100%;
   height: 100%;
+}
+
+.img--section {
+  width: 100%;
+  height: auto;
+}
+
+.img--margin {
+  margin: 0 1rem;
 }
 
 .p {
@@ -84,6 +94,24 @@ a {
   border: 2px solid #e6e6e6;
 }
 
+.section {
+  min-height: 40vh;
+  padding: 0 12%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .navigation {
   width: 100%;
   min-height: auto;
@@ -103,6 +131,8 @@ a {
   -webkit-box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
           box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
   padding: 1rem 12%;
+  position: relative;
+  z-index: 2;
 }
 
 .slogan {
@@ -206,6 +236,13 @@ a {
   right: -5%;
   width: 100%;
   height: 100%;
+}
+
+.img__container--section {
+  width: auto;
+  height: auto;
+  position: relative;
+  z-index: 1;
 }
 
 .header__content {
