--- a/style/style.scss
+++ b/style/style.scss
@@ -83,6 +83,14 @@ a {
 		color: $secondary-text-color;
 		font-size: 2rem;
 	}
+
+	&--primary {
+		color: $primary-color;
+	}
+
+	&--secondary {
+		color: $secondary-color;
+	}
 }
 
 .btn {
@@ -134,6 +142,24 @@ a {
 			left: 3%;
 		}
 	}
+
+	&--important {
+		background: $primary-color;
+		border: 2px solid $primary-color;
+		padding: 0.6rem;
+		border-radius: 10px;
+
+		&::before {
+			border-radius: 10px;
+			top: 3%;
+			left: 3%;
+		}
+
+		&:hover {
+			box-shadow: none;
+			background: $secondary-color;
+		}
+	}
 }
 
 .section {
@@ -145,6 +171,21 @@ a {
 		@include flex();
 		flex-wrap: wrap;
 	}
+
+	&--background {
+		background: url(https://parafiaslough.org/wp-content/uploads/2018/12/PA270886-1.jpg);
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: center;
+		background-attachment: fixed;
+	}
+}
+
+.hr {
+	background: $primary-color;
+	border: 1px solid $primary-color;
+	outline: none;
+	margin: 1rem 0;
 }
 
 // Navigation styling
@@ -305,4 +346,21 @@ a {
 	width: 100%;
 	height: auto;
 	@include flex(row, space-around, flex-end);
+}
+
+// Footer styling
+.footer {
+	width: 100%;
+	min-height: 20vh;
+	padding: 2rem $padding-horizontal;
+	@include flex(row, space-between);
+}
+
+.container {
+	flex-grow: 1;
+	width: 100%;
+	text-align: center;
+	&--center {
+		margin: 0 1rem;
+	}
 }
