--- a/style/style.css
+++ b/style/style.css
@@ -73,6 +73,14 @@ a {
   color: #6452ff;
 }
 
+.p--white {
+  color: white;
+}
+
+.p--left {
+  text-align: left;
+}
+
 .btn {
   background: #6452ff;
   padding: 1.5rem 2rem;
@@ -163,6 +171,7 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: relative;
 }
 
 .section--banner {
@@ -191,11 +200,30 @@ a {
   background-attachment: fixed;
 }
 
+.section--background::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+}
+
 .hr {
   background: #fd5050;
   border: 1px solid #fd5050;
   outline: none;
   margin: 1rem 0;
+  width: 100%;
+}
+
+.h3 {
+  font-size: 2.2rem;
+}
+
+.h3--address {
+  color: #fd5050;
 }
 
 .navigation {
@@ -408,12 +436,32 @@ a {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
+  text-align: left;
+}
+
+.column-center {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .footer {
   width: 100%;
   min-height: 20vh;
   padding: 2rem 12%;
+}
+
+.footer__wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -424,9 +472,10 @@ a {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  width: 100%;
 }
 
 .container {
@@ -439,5 +488,11 @@ a {
 
 .container--center {
   margin: 0 1rem;
+}
+
+.container--address {
+  position: relative;
+  z-index: 3;
+  min-height: 50vh;
 }
 /*# sourceMappingURL=style.css.map */
