--- a/style/style.css
+++ b/style/style.css
@@ -81,6 +81,10 @@ a {
   text-align: left;
 }
 
+.p--copyright {
+  font-size: 1rem;
+}
+
 .btn {
   background: #6452ff;
   padding: 1.5rem 2rem;
@@ -90,8 +94,8 @@ a {
   cursor: pointer;
   font-size: 1.1rem;
   color: #e6e6e6;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
   position: relative;
   border: 2px solid #6452ff;
   -webkit-box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
@@ -99,8 +103,8 @@ a {
 }
 
 .btn::before {
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
   content: '';
   position: absolute;
   top: 5%;
@@ -224,6 +228,32 @@ a {
 
 .h3--address {
   color: #fd5050;
+}
+
+.a {
+  font-size: 1.2rem;
+  color: #fd5050;
+  position: relative;
+  display: inline-block;
+}
+
+.a::after {
+  content: '';
+  border-bottom: 2px solid red;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+}
+
+.a:hover::after {
+  width: 0%;
+}
+
+.a--h1::after {
+  display: none;
 }
 
 .navigation {
@@ -494,5 +524,20 @@ a {
   position: relative;
   z-index: 3;
   min-height: 50vh;
+}
+
+.container--copyright {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 /*# sourceMappingURL=style.css.map */
