--- a/style/style.css
+++ b/style/style.css
@@ -160,34 +160,36 @@ a {
 }
 
 .btn--burger {
-  width: 3rem;
-  height: 3rem;
-  border-radius: 0;
-  background: #6452ff;
-  position: absolute;
-  right: 1rem;
-  padding: 5px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.btn--burger::before {
   display: none;
 }
 
-.btn--burger:hover {
-  background: #6452ff;
+@media screen and (max-width: 1140px) {
+  .btn--burger {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 0;
+    background: #6452ff;
+    padding: 5px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .btn--burger::before {
+    display: none;
+  }
+  .btn--burger:hover {
+    background: #6452ff;
+  }
 }
 
 .btn--more {
@@ -438,6 +440,20 @@ a {
 @media screen and (max-width: 1140px) {
   .navigation {
     padding: 1rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: flex-center;
+        -ms-flex-align: flex-center;
+            align-items: flex-center;
+    position: relative;
   }
 }
 
@@ -870,5 +886,9 @@ a {
 
 .text--blue {
   color: #6452ff;
+}
+
+.burger__container {
+  position: relative;
 }
 /*# sourceMappingURL=style.css.map */
