--- a/style/style.scss
+++ b/style/style.scss
@@ -583,6 +583,10 @@ a {
 	height: auto;
 	@include flex(row, space-around, flex-end);
 	text-align: left;
+
+	@media screen and (max-width: $medium-display) {
+		@include flex(column);
+	}
 }
 
 // Column center elements
@@ -644,6 +648,13 @@ a {
 	&--description {
 		margin: 2rem 0;
 	}
+
+	&--map {
+		position: relative;
+		width: 100%;
+		height: 50vh;
+		z-index: 3;
+	}
 }
 
 // Input container style
@@ -661,4 +672,10 @@ a {
 // Burger btn container
 .burger__container {
 	position: relative;
+}
+
+.map {
+	width: 100%;
+	height: 50vh;
+	border: 0;
 }
